--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set has_splash = "true" %}
 {% import "projects/_helpers.html" as helper %}
 {% import "account/_helpers.html" as account_helper %}
 
