--- a/templates/projects/tasks.html
+++ b/templates/projects/tasks.html
@@ -96,42 +96,17 @@
                 </a>
             </div>
 
-            <div id="task_investigation" class="col-sm-6 col-md-4">
-                <a href="{{ url_for('data/project.investigate', short_name=project.short_name) }}" rel="nofollow">
-                    <div class="well">
-                        <span class="fa fa-search fa-4x"></span>
-                        <h3 class="margin-bottom-xs">Investigate Tasks</h3>
-                    </div>
-                </a>
-            </div>
-
-
-            <div id="ambiguous_autoimporter" class="col-sm-6 col-md-4">
-                <a href="{{url_for('data/project.ambiguous_autoimporter', type='ambiguous', short_name=project.short_name)}}" rel="nofollow">
-                    <div class="well">
-                        <span class="fa fa-cogs fa-4x"></span>
-                        <h3 class="margin-bottom-xs">Auto-import Ambiguous Tasks</h3>
-                    </div>
-                </a>
-            </div>
-
-            <div id="task_investigators" class="col-sm-6 col-md-4">
-                <a href="{{ url_for('data/project.investigators', short_name=project.short_name) }}" rel="nofollow">
-                    <div class="well">
-                        <span class="fa fa-users fa-4x"></span>
-                        <h3 class="margin-bottom-xs">Investigators</h3>
-                    </div>
-                </a>
-            </div>
-
-            <div id="grouped_data_criteria" class="col-sm-6 col-md-4">
-                <a href="{{ url_for('data/project.criteria', short_name=project.short_name) }}" rel="nofollow">
+            <!-- See https://github.com/alexandermendes/pybossa-analyst -->
+            {% if "pybossa_analyst" in plugins %}
+            <div id="rules" class="col-sm-6 col-md-4">
+                <a href="{{ url_for('analyst.rules', short_name=project.short_name) }}" rel="nofollow">
                     <div class="well">
                         <span class="fa fa-balance-scale fa-4x"></span>
-                        <h3 class="margin-bottom-xs">Grouped Data Criteria</h3>
+                        <h3 class="margin-bottom-xs">Rules</h3>
                     </div>
                 </a>
             </div>
+            {% endif %}
 
             <div id="delete_project" class="col-sm-6 col-md-4">
                 <a href="{{url_for('project.delete', short_name=project.short_name)}}" rel="nofollow">
