--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -22,7 +22,7 @@
 </div>
 
 <section class="mid-grey pattern-brushed box-shadow-grey-bottom">
-    <p class="attribution"><small>Photo: <a href="http://flic.kr/p/i5L8Ux" target="_blank">Mechanical Curator</a></small></p>
+    <p class="attribution">Photo: <a href="http://flic.kr/p/i5L8Ux" target="_blank">Mechanical Curator</a></p>
     <div class="container container-padded">
         <div class="col-sm-offset-2 col-sm-8 text-center">
             <h2 class="inset-text-grey text-center">What's this all about?</h2>
