--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -4,7 +4,7 @@
 </div>
 
 <section class="mid-grey pattern-brushed box-shadow-grey-bottom">
-    <p class="attribution"><small>Photo: &copy; <a href="http://www.lensintheface.com" target="_blank">Jon Ellis</a></small></p>
+    <p class="attribution">Photo: &copy; <a href="http://www.lensintheface.com" target="_blank">Jon Ellis</a></p>
     <div class="container container-padded">
         <div class="col-md-11">
             <h1 class="inset-text-grey">About</h1>
