--- a/templates/projects/project.html
+++ b/templates/projects/project.html
@@ -7,7 +7,7 @@
 {% block content %}
 {% if project %}
 {% include "_flash_messages_floating.html" %}
-<div class="splash" data-src="{{ url_for('static', filename='img/splash/category_' + project.category_id|string + '.jpg') }}">
+<div id="#portal-splash" class="splash" data-src="{{ url_for('static', filename='img/splash/category_' + project.category_id|string + '.jpg') }}">
     <div class="vcenter hcenter position-relative" style="height:100%;">
         <div class="container text-center ie-mid-vcenter padding-top-lg">
             <div class="container-padded">
@@ -15,7 +15,7 @@
                 <h2>{{ overall_progress | round | int }}% complete</h2>
 
                 <!-- Contribute button -->
-                <div class="col-xs-12">
+                <div class="col-xs-12 splash-dependant">
                     <a href="{{ url_for('project.presenter', short_name=project.short_name)}}"
                        data-progress="{{ overall_progress | round | int }}"
                        class="btn btn-circle btn-circle-large btn-circle-progress {% if overall_progress < 100 %}glowing-link{% endif %}">
@@ -32,66 +32,50 @@
     </div>
 </div>
 
-<a id="info"></a>
-<section class="mid-grey pattern-brushed box-shadow-grey-bottom inset-text-grey">
-
-    {% if project.info.attribution %}
-        <p class="attribution"><small>Photo:
-        {% if project.info.attribution_link %}
-            <a href="{{project.info.attribution_link}}" target="_blank">
-        {% endif %}
-        {{project.info.attribution}}
-        {% if project.info.attribution_link %}
-            </a>
-        {% endif %}
-        </small></p>
-    {% endif %}
+{% if overall_progress < 100 %}
+<section class="pattern-white-wall box-shadow-white-top">
+    <p id="#portal-attribution" class="attribution" data-category-id="{{ project.category_id }}"></p>
 
     <div class="container container-padded">
         <div class="col-xs-10 col-xs-offset-1">
-
-            {% if overall_progress == 100 %}
-                <p class="lead-large">
-                    Many thanks to all those who helped us complete this project.
-                </p>
-                <p class="list-volunteers"></p>
-            {% else %}
-
-            <div class="tutorial-video" data-src="{{ url_for('static', filename='video/category_' + project.category_id|string + '.mp4') }}">
-
+            <div id="#portal-video" data-src="{{ url_for('static', filename='video/category_' + project.category_id|string + '.mp4') }}">
             </div>
-
-                {% if project.long_description %}
-                    <div class="description">
-                        {{ project.long_description | e | markdown }}
-                    </div>
-                {% endif %}
-
+            {% if project.long_description %}
+                {{ project.long_description | e | markdown }}
             {% endif %}
         </div>
     </div>
 </section>
+{% endif %}
 
 
-
-{% if overall_progress < 100 %}
-<section>
+<section class="inset-shadow-top">
     <div class="container container-padded">
         <div class="col-xs-12 text-center">
             <div class="row">
+                {% if overall_progress < 100 %}
                 <h2>Get involved</h2>
                 <p>Your contributions will have a direct impact on enabling future reasearch at the British Library.<p>
                 <div class="row text-center padding-top-xs">
                     <a href="{{ url_for('project.presenter', short_name=project.short_name)}}" class="btn btn-danger"> Contribute now</a>
                 </div>
+                {% else %}
+                <h2>Many thanks to all those that helped us complete this project!</h2>
+                <p>Click below to find an active project<p>
+                <div class="row text-center padding-top-xs">
+                    <a href="{{ url_for('project.index')}}" class="btn btn-danger">View all projects</a>
+                </div>
+                {% endif %}
                 <hr class="padding-bottom-xs">
                 {{ helper.render_social_media_buttons("www.libcrowds.com/project/{{ project.short_name }}", "Come and give us a hand with {{ project.name }}!") }}
             </div>
         </div>
     </div>
 </section>
-{% endif %}
 
+<script src="{{url_for('static', filename='js/btn-progress.js')}}" type="text/javascript"></script>
+<script src="{{url_for('static', filename='js/portal.js')}}" type="text/javascript"></script>
+<link href="{{url_for('static', filename='css/btn-progress.css')}}" rel="stylesheet" type="text/css" />
 {% else %}
     {{ helper.render_non_existant_project() }}
 {% endif %}
