--- a/templates/account/projects.html
+++ b/templates/account/projects.html
@@ -3,6 +3,7 @@
 {% import "projects/_helpers.html" as helper %}
 
 {% block content %}
+{% if (current_user.is_authenticated() and current_user.pro) or current_user.admin %}
 <div class="container container-main">
     <div class="row">
         <div class="col-xs-12 col-sm-10 col-sm-offset-1">
@@ -48,5 +49,8 @@
         </div>
     </div>
 </div>
+{% else %}
+    {% include '401.html' %}
+{% endif %}
 {{ helper.broken_image() }}
 {% endblock %}
