Improve no contributions message

--- a/templates/account/public_profile.html
+++ b/templates/account/public_profile.html
@@ -23,8 +23,8 @@
                 <div class="text-center">
                     <h2>No contributions</h2>
                     <p>Here's your chance for a headstart!</p>
-                    <div class="col-xs-12 text-center padding-bottom-md padding-top-sm">
-                        <a class="btn btn-default" href="{{url_for('project.index')}}">Get started</a>
+                    <div class="text-center padding-bottom-sm padding-top-sm">
+                        <a class="btn btn-danger" href="{{url_for('project.index')}}">View all projects</a>
                     </div>
                 </div>
                 {% endif %}
