--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -20,8 +20,8 @@
                 <div class="text-center">
                     <h2>No contributions</h2>
                     <p>You'd better get started <i class="fa fa-smile-o"></i></p>
-                    <div class="col-xs-12 text-center padding-bottom-md padding-top-sm">
-                        <a class="btn btn-default" href="{{url_for('project.index')}}">View all projects</a>
+                    <div class="text-center padding-bottom-sm padding-top-sm">
+                        <a class="btn btn-danger" href="{{url_for('project.index')}}">View all projects</a>
                     </div>
                 </div>
                 {% endif %}
