--- a/templates/projects/update.html
+++ b/templates/projects/update.html
@@ -6,7 +6,7 @@
 {% block content %}
 <script src="{{url_for('static', filename='js/vendor/jquery.Jcrop.min.js')}}"></script>
 <link rel="stylesheet" href="{{url_for('static', filename='css/jquery.Jcrop.min.css')}}" type="text/css" />
-{{ helper.render_project_local_nav(project, 'settings', current_user) }}
+{{ helper.render_project_local_nav(project, 'settings', current_user, pro_features) }}
 <div class="container container-main">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3">
