--- a/templates/projects/tasks_browse.html
+++ b/templates/projects/tasks_browse.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
             {% endfor %}
-            {{ helper.render_pagination(pagination, '') }}
+            {{ helper.render_pagination(pagination) }}
         </div>
     </div>
 </div>
