Minor layout fixes

--- a/templates/_formhelpers.html
+++ b/templates/_formhelpers.html
@@ -57,7 +57,7 @@
 {% endmacro %}
 
 {% macro render_toggle(field, label) %}
-<div class="row padding-top-xs vcenter">
+<div class="row padding-top-xs vcenter padding-bottom-sm">
     <div class="onoffswitch-group">
         <div class="onoffswitch">
             {{field(class="onoffswitch-checkbox")}}
