--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -12,7 +12,7 @@
             <div class="col-xs-12">
                 <div data-anchor="#featured-projects" class="btn btn-circle anchor-btn">
                     <a>
-                        <div><i class="fa fa-angle-double-down fa-3x padding-top-xs"></i></div>
+                        <div><i class="fa fa-angle-double-down fa-3x padding-top-sm"></i></div>
                         <div><br>Get<br>Started</div>
                     </a>
                 </div>
