--- a/templates/projects/tasks.html
+++ b/templates/projects/tasks.html
@@ -14,31 +14,32 @@
             <div class="col-xs-12 padding-bottom-xs">
                 <h1 class="inset-text-grey"><strong>Project Options</strong></h1>
             </div>
-            {% if project.owner_id == current_user.id or (current_user.is_authenticated() and current_user.admin)%}
 
+            {% if (current_user.is_authenticated() and project.owner_id == current_user.id) or current_user.admin)%}
             <div id="import_tasks" class="col-sm-6 col-md-4">
                 <a href="{{url_for('project.import_task', short_name=project.short_name)}}" rel="nofollow">
-                <div class="well  ">
+                    <div class="well">
                         <span class="fa fa-download fa-4x"></span>
                         <h3 class="margin-bottom-xs">Import Tasks</h3>
-                </div>
+                    </div>
                 </a>
             </div>
+
             <div id="export_tasks" class="col-sm-6 col-md-4">
                 <a href="{{url_for('project.export_to', short_name=project.short_name)}}" rel="nofollow">
-                        <div class="well  ">
-                                <span class="fa fa-upload fa-4x"></span>
-                                <h3 class="margin-bottom-xs">Export Tasks</h3>
-                        </div>
+                    <div class="well">
+                        <span class="fa fa-upload fa-4x"></span>
+                        <h3 class="margin-bottom-xs">Export Tasks</h3>
+                    </div>
                 </a>
             </div>
 
             <div id="autoimport_tasks" class="col-sm-6 col-md-4">
                 <a href="{{url_for('project.setup_autoimporter', short_name=project.short_name)}}" rel="nofollow">
-                        <div class="well  ">
-                                <span class="fa fa-cogs fa-4x"></span>
-                                <h3 class="margin-bottom-xs">Auto-import Tasks</h3>
-                        </div>
+                    <div class="well">
+                        <span class="fa fa-cogs fa-4x"></span>
+                        <h3 class="margin-bottom-xs">Auto-import Tasks</h3>
+                    </div>
                 </a>
             </div>
 
@@ -53,7 +54,7 @@
 
             <div id="task_browse" class="col-sm-6 col-md-4">
                 <a href="{{url_for('project.tasks_browse', short_name=project.short_name)}}" rel="nofollow">
-                <div class="well">
+                    <div class="well">
                         <span class="fa fa-list-alt fa-4x"></span>
                         <h3 class="margin-bottom-xs">Browse Tasks</h3>
                     </div>
@@ -80,7 +81,7 @@
 
             <div id="task_priority" class="col-sm-6 col-md-4">
                 <a href="{{url_for('project.task_priority', short_name=project.short_name)}}" rel="nofollow">
-                <div class="well">
+                    <div class="well">
                         <span class="fa fa-sort-numeric-asc fa-4x"></span>
                         <h3 class="margin-bottom-xs">Task Priority</h3>
                     </div>
@@ -95,18 +96,6 @@
                     </div>
                 </a>
             </div>
-
-            <!-- See https://github.com/alexandermendes/pybossa-analyst -->
-            {% if "pybossa_analyst" in plugins %}
-            <div id="rules" class="col-sm-6 col-md-4">
-                <a href="{{ url_for('analyst.rules', short_name=project.short_name) }}" rel="nofollow">
-                    <div class="well">
-                        <span class="fa fa-balance-scale fa-4x"></span>
-                        <h3 class="margin-bottom-xs">Rules</h3>
-                    </div>
-                </a>
-            </div>
-            {% endif %}
 
             <div id="delete_project" class="col-sm-6 col-md-4">
                 <a href="{{url_for('project.delete', short_name=project.short_name)}}" rel="nofollow">
@@ -143,6 +132,19 @@
                     </div>
                 </a>
             </div>
+            
+            <!-- See https://github.com/alexandermendes/pybossa-analyst -->
+            {% if "pybossa_analyst" in plugins %}
+            <div id="rules" class="col-sm-6 col-md-4">
+                <a href="{{ url_for('analyst.rules', short_name=project.short_name) }}" rel="nofollow">
+                    <div class="well">
+                        <span class="fa fa-balance-scale fa-4x"></span>
+                        <h3 class="margin-bottom-xs">Rules</h3>
+                    </div>
+                </a>
+            </div>
+            {% endif %}
+
             {% endif %}
         </div>
     </div>
