--- a/templates/projects/update.html
+++ b/templates/projects/update.html
@@ -18,35 +18,35 @@
             <form method="post" class="form-horizontal upload-img-form padding-top-xs" action="{{ url_for('project.update', short_name=project.short_name) }}" enctype="multipart/form-data">
                 <fieldset>
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-                      <div class="col-xs-12 text-center">
-                          <div class="center-block img-overlay-container">
-                                {{ helper.render_project_thumbnail(project, upload_method, class="img-polaroid", id="project.id") }}
-                                <div class="img-overlay edit-profile-image">
-                                    <i class="fa fa-pencil-square-o fa-3x"></i>
-                                    <span>Edit</span>
-                                </div>
-                          </div>
-                      </div>
+                    <div class="col-xs-12 text-center">
+                        <div class="center-block img-overlay-container">
+                            {{ helper.render_project_thumbnail(project, upload_method, class="img-polaroid", id="project.id") }}
+                            <div class="img-overlay edit-profile-image">
+                                <i class="fa fa-pencil-square-o fa-3x"></i>
+                                <span>Edit</span>
+                            </div>
+                        </div>
+                    </div>
                     {{ form_helper.render_field(upload_form.avatar, onchange="loadPreview()", class="form-control hidden") }}
                     {{ upload_form.x1 }}
                     {{ upload_form.y1 }}
                     {{ upload_form.x2 }}
                     {{ upload_form.y2 }}
                     <div id="modal" class="modal fade">
-                      <div class="modal-dialog img-dialog">
-                          <div class="modal-content">
-                              <div class="modal-body">
-                                  <img id="uploadPreview">
-                              </div>
+                        <div class="modal-dialog img-dialog">
+                            <div class="modal-content">
+                                <div class="modal-body">
+                                    <img id="uploadPreview">
+                                </div>
 
-                              <div class="modal-footer">
-                                  <div class="form-actions text-center">
-                                      <button type="submit" id="upload-btn" name='btn' value="Upload Avatar" class="btn btn-primary btn-lg" >Upload</button>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
+                                <div class="modal-footer">
+                                    <div class="form-actions text-center">
+                                        <button type="submit" name='btn' value="Upload" class="btn btn-primary btn-large">Upload</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </fieldset>
             </form>
 
