--- a/templates/projects/export.html
+++ b/templates/projects/export.html
@@ -11,7 +11,7 @@
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3">
             {% include "_flash_messages.html" %}
-            {{ helper.render_project_title(project, upload_method, subtitle="Export Tasks")}}
+            {{ helper.render_project_title(project, subtitle="Export Tasks")}}
             {{ helper.render_loading("Exporting data, this may take a while, please wait...") }}
             <h3 class="text-inset-grey">Export Raw CSV Data</h3>
             <div class="row">
