--- a/templates/projects/project.html
+++ b/templates/projects/project.html
@@ -11,7 +11,7 @@
     <div class="vcenter hcenter position-relative" style="height:100%;">
         <div class="container text-center ie-mid-vcenter padding-top-lg">
             <div class="container-padded">
-                <h1>{{ helper.render_project_title(project, upload_method) }}</h1>
+                <h1>{{ helper.render_project_title(project) }}</h1>
                 <h2>{{ overall_progress | round | int }}% complete</h2>
 
                 <!-- Contribute button -->
