--- a/templates/projects/task_autoimport_options.html
+++ b/templates/projects/task_autoimport_options.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3">
             {% include "_flash_messages.html" %}
-            {{ helper.render_project_title(project, subtitle="Setup task autoimporter")}}
+            {{ helper.render_project_title(project, subtitle="Auto-import tasks")}}
             <div class="row">
                 <div class="col-sm-12">
                     <p class="lead">Use one of the following available
