--- a/templates/projects/auditlog.html
+++ b/templates/projects/auditlog.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3">
             {% include "_flash_messages.html" %}
-        {{ helper.render_project_title(project, subtitle="Webhooks") }}
+        {{ helper.render_project_title(project, subtitle="Audit Log) }}
         {% if logs %}
         <table class="table table-stripped table-condensed table-hover table-responsive">
             <thead>
