--- a/templates/projects/webhook.html
+++ b/templates/projects/webhook.html
@@ -10,8 +10,8 @@
         <div class="col-sm-9 col-sm-offset-3">
             {% include "_flash_messages.html" %}
             {{ helper.render_project_title(project, subtitle="Webhooks") }}
-            <div class="padding-bottom-sm">
-                <a id="webhooks-refresh" href="#" class="btn btn-info" hidden onclick="document.location.reload(true);"> Refresh</a>
+            <div class="padding-bottom-sm pull-right">
+                <a id="webhooks-refresh" href="#" class="btn btn-primary" style="display: none;" onclick="document.location.reload(true);"> Refresh</a>
             </div>
             <table class="table table-stripped table-condensed table-hover table-responsive">
                 <tr>
