--- a/templates/projects/stats.html
+++ b/templates/projects/stats.html
@@ -16,8 +16,8 @@
 <link href="{{url_for('static', filename='css/stats/MarkerCluster.Default.css" rel="stylesheet" type="text/css">
 <link href="{{url_for('static', filename='css/stats/stats.css" rel="stylesheet" type="text/css">
 <script src="http://cdn.leafletjs.com/leaflet-0.4/leaflet.js"></script>
-<script src="{{url_for('static', filename='js/stats/flotr2.min.js" type="text/javascript"></script>
-<script src="{{url_for('static', filename='js/stats/leaflet.markercluster.js" type="text/javascript"></script>
+<script src="{{url_for('static', filename='js/stats/flotr2.min.js' type="text/javascript"></script>
+<script src="{{url_for('static', filename='js/stats/leaflet.markercluster.js' type="text/javascript"></script>
 <script>
     var projectStats = {{projectStats|safe}};
 </script>
