--- a/templates/projects/_helpers.html
+++ b/templates/projects/_helpers.html
@@ -32,12 +32,21 @@
 
 {% macro render_project_local_nav(project, active_link, current_user, pro_features) -%}
 <ul data-spy="affix" data-offset-top="200px" class="nav nav-list bs-docs-sidenav affix-top">
-{% if ( current_user.is_authenticated() and current_user.id == project.owner_id and current_user.pro) or current_user.admin %}
+{% if staff_or_admin %}
     <li class="nav-link"><a href="{{url_for('project.new')}}">New</a></li>
 
     {% if project %}
         <li class="divider"></li>
         <li class="nav-link"><a href="{{url_for('project.tasks', short_name=project.short_name)}}">Dashboard</a></li>
+        <li class="nav-link">
+            <a href="#" id="admin-options">Import/Export Options<i class="fa fa-angle-down pull-right"></i></a>
+            <ul class="nav nav-stacked inset-shadow remove-padding-top" id="admin-menu" hidden>
+                <li class="nav-link"><a href="{{url_for('admin.index')}}">Dashboard</a></li>
+                <li class="nav-link"><a href="{{url_for('admin.featured')}}">Featured</a></li>
+                <li class="nav-link"><a href="{{url_for('admin.categories')}}">Categories</a></li>
+            </ul>
+        </li>
+
         <li class="nav-link{% if active_link=="update"%} active{% endif %}">
             <a href="{{url_for('project.update', short_name=project.short_name)}}"> Project Details</a>
         </li>
@@ -57,7 +66,7 @@
         <li class="nav-link{% if active_link=="results"%} active{% endif %}">
             <a href="{{url_for('project.results', short_name=project.short_name)}}"> Results</a>
         </li>
-        <li class="nav-link{% if active_link=="statistics"%} active{% endif %}">
+        <li class="nav-link{% if active_link=="stats"%} active{% endif %}">
             <a href="{{url_for('project.show_stats', short_name=project.short_name)}}"> Statistics</a>
         </li>
     {% endif %}
