--- a/templates/account/public_profile.html
+++ b/templates/account/public_profile.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <span class="set-body-bg" data-bg="pattern-white-wall"></span>
-{% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
+{% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated() and not current_user.admin)) %}
     {{ privacy.render_lock_page() }}
 {% else %}
 <div class="container container-main">
