--- a/templates/base.html
+++ b/templates/base.html
@@ -65,14 +65,21 @@
         </noscript>
 
         <div id="body-content">
-          {% if not current_user.is_anonymous() %}
-          <!-- checkpoint::logged-in::{{current_user.name}} -->
-          {% endif %}
+            {% if not current_user.is_anonymous() %}
+            <!-- checkpoint::logged-in::{{current_user.name}} -->
+            {% endif %}
 
-          {% set active_page = active_page | default('index') -%}
-          {% set has_splash = has_splash | default('false') -%}
-          {% set active_project  = active_project | default('none') -%}
-          {% include "_navbar.html" %}
+            <!-- Check if staff or admin -->
+            {% if current_user.is_authenticated() %}
+                  {% set staff_or_admin = (len(current_user.email_addr.split('@')) == 2 and current_user.email_addr.split('@')[1] == 'bl.uk') or current_user.admin %}
+            {% else %}
+                {% set staff_or_admin = False %}
+            {% endif %}
+
+            {% set active_page = active_page | default('index') -%}
+            {% set has_splash = has_splash | default('false') -%}
+            {% set active_project  = active_project | default('none') -%}
+            {% include "_navbar.html" %}
 
             <div class="container-fluid">
 
