--- a/templates/projects/new.html
+++ b/templates/projects/new.html
@@ -6,7 +6,7 @@
 {% from "_formhelpers.html" import render_field %}
 
 {% block content %}
-{% if (current_user.is_authenticated() and current_user.pro) or current_user.admin %}
+{% if staff_or_admin %}
 <div class="container container-main">
     <div class="row">
         <div class="col-xs-12 col-sm-10 col-sm-offset-1">
