--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -583,6 +583,7 @@ thead {
     -webkit-box-shadow: inset 0 0 3px 1px rgba(0, 0, 0, 0.2);
     box-shadow: inset 0 0 3px 1px rgba(0, 0, 0, 0.2);
     border: 1px solid #fff
+    height: 190px;
 }
 
 .well:hover {
@@ -664,6 +665,9 @@ thead {
 }
 
 @media (min-width: 992px) {
+    .well {
+        height: 220px;
+    }
     .pull-right-md {
         float: right
     }
@@ -994,6 +998,10 @@ h1 i, h2 i, h3 i {
     border: 1px solid rgba(145, 145, 145, 0.5)
 }
 
+.nav{
+    font-weight: 300;
+}
+
 .bs-docs-sidenav {
     z-index: 99;
     padding: 0;
@@ -1150,14 +1158,7 @@ h1 i, h2 i, h3 i {
         padding-right: 15px!important
     }
     .bs-docs-sidenav.affix {
-
-    }
-    .bs-docs-sidenav {
-        width: auto;
-        margin-bottom: 20px
-    }
-    .bs-docs-sidenav.affix li:first-child {
-        padding-top: 20px
+        display: none;
     }
 }
 
@@ -1909,6 +1910,7 @@ textarea {
     cursor: pointer;
     border: 2px solid #DDD;
     border-radius: 3px;
+    margin-bottom: 0;
 }
 
 .onoffswitch-inner {
@@ -2229,7 +2231,7 @@ img.img-polaroid {
 .splash h1 {
     font-size: 3.0em;
     text-shadow: none;
-    font-weight: 300
+    font-weight: 300;
 }
 
 .splash h1 strong {
@@ -2256,6 +2258,10 @@ img.img-polaroid {
 }
 
 #home-splash {
+    background-image: url(../img/splash/home.png);
+}
+
+#home-splash h1 {
     font-size: 2.0em;
     background-image: url(../img/splash/home.png);
 }
